Opened 13 years ago

Closed 13 years ago

#8354 closed bug (fixed)

Missing symbols for BeAE

Reported by: jprostko Owned by: axeld
Priority: normal Milestone: R1/alpha4
Component: Kits/Interface Kit Version: R1/Development
Keywords: beae missing symbol Cc:
Blocked By: Blocking:
Platform: All

Description

Trying BeAE recently on hrev43781, I discovered that both the GCC2 and GCC4 optional packages fail to load.

The missing symbol for the GCC2 version as per the syslog is:

InvalidateLayout7BSliderb

The missing symbol for the GCC4 version as per the syslog is:

_ZN5BMenu16InvalidateLayoutEb

The symbol should be added for GCC2, perhaps just recompiling the optional package for GCC4 however, correct? I figure GCC4 is a moving target, so apps should just be rebuilt until things stabilize for R2. I rebuilt both GCC2 and GCC4 locally via HaikuPorter and both work as they should now, obviously. If the suggestion for GCC4 is a rebuild, I'll commit it within the next few days.

Change History (9)

comment:1 by korli, 13 years ago

Please try again with hrev43785.

in reply to:  1 comment:2 by jprostko, 13 years ago

Replying to korli:

Please try again with hrev43785.

This fixed things for GCC2, but now I get a missing symbol on GCC4 for the following:

_ZN9BTextView16InvaldateLayoutEb

comment:3 by korli, 13 years ago

It's added in hrev43789.

in reply to:  3 comment:4 by jprostko, 13 years ago

Replying to korli:

It's added in hrev43789.

Okay, the saga continues for GCC4 unfortunately. Hopefully this concludes the missing symbols:

_ZN7BSlider16InvalidateLayoutEb

Also, sorry I mistyped "Invalidate" in my previous message. I just took a picture of the screen and typed it due to not having network availability at the time. You did it correctly in your commit, so thanks for being more thorough than I was. :)

comment:5 by korli, 13 years ago

That's OK, I added most of missing symbols in hrev43790.

comment:6 by tangobravo, 13 years ago

As these are all layout API symbols, I didn't think we cared about binary compatibility (at least before yourpalal's latest refactoring work to add padding etc). If it's a Haiku-added API don't we usually just rebuild the affected packages?

in reply to:  6 comment:7 by korli, 13 years ago

Replying to tangobravo:

As these are all layout API symbols, I didn't think we cared about binary compatibility (at least before yourpalal's latest refactoring work to add padding etc). If it's a Haiku-added API don't we usually just rebuild the affected packages?

We care about GCC2 binary compatibility for sure, but even then & package rebuild could be needed because of wchar_t's size change. For GCC4, see #8336, this can get pretty annoying until package management is available.

comment:8 by jprostko, 13 years ago

hrev43790 officially fixed BeAE for GCC4. Thanks for looking into this!

comment:9 by jprostko, 13 years ago

Resolution: fixed
Status: newclosed
Note: See TracTickets for help on using tickets.