interface kit: added compatibility symbols for BeAE for #8354

* _ZN5BMenu16InvalidateLayoutEb for GCC4
* InvalidateLayout__7BSliderb for GCC2